@@ -1,3 +1,8 @@
+4852.	[bug]		Handle strftime() failing in isc_time_formatISO8601ms.
+			Add REQUIRE's and INSIST's to isc_time_formattimestamp,
+			isc_time_formathttptimestamp, isc_time_formatISO8601,
+			isc_time_formatISO8601ms. [RT #46892]
+
 4851.	[port]		Support using kyua as well as atf-run to run the unit
 			tests. [RT #46853]
 
